--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -56,7 +56,8 @@ h5, p{
   background: purple;
   color: rgb(213, 213, 13);
   cursor: pointer;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
   user-select:none;
   height: 200px; 
   width: 150px;
