--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -59,6 +59,7 @@ h5, p{
   justify-content: center;
   align-items: center;
   user-select:none;
+  display:block;
   height: 200px; 
   width: 150px;
 }
