--- a/Pokemon Bootstrap/Poke'mon App/css/styles.css
+++ b/Pokemon Bootstrap/Poke'mon App/css/styles.css
@@ -1,92 +1,1 @@
-
-
-
-
-a.nav-link, a.navbar-brand, .navbar-light, .navbar-toggler{
-  font-family:pokemon_text;
-  color:rgb(213, 213, 13)!important;
-  user-select:none;
-}
-
-@font-face{
-  font-family: pokemon_text;
-  src:url(Pokemon_Solid.ttf);
-}
-
-h1{
-  font-family: pokemon_text!important;
-  color:rgb(213, 213, 13)!important;
-  text-align:center;
-  font-size:3rem;
-  margin-bottom:50px;
-  margin-top:50px;
-  user-select:none;
-}
-
-h5, p{
-  color:black;
-  font-family: pokemon_text!important;
-  user-select:none;
-
-}
-
-.modal-header, .modal-footer{
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  user-select:none;
-}
-
-.modal-content{
- background-color:rgb(213, 213, 13)!important;
- user-select:none;
-}
-
-.btn-secondary {
-  font-family: pokemon_text!important;
-  background: purple;
-  color: rgb(213, 213, 13);
-  user-select:none;
-}
-
-.card-btn {
-  border-radius: 20px;
-  border: 0;
-  font-family: pokemon_text!important;
-  font-weight: 600;
-  background: purple;
-  color: rgb(213, 213, 13);
-  cursor: pointer;
-  justify-content: center;
-  align-items: center;
-  user-select:none;
-  display:flex;
-  height: 200px; 
-  width: 150px;
-}
-li.list-group-item{
-  justify-content:center;
-  display:flex;
-  background-color:#db3f3f!important;
-}
-
-.card-btn:hover, .btn-secondary:hover{
-  background: rgb(184, 1, 184);
-}
-
-.pokemon-list row list-group{
-  border:none;
-  user-select:none;
-}
-
-html,body,li.col.list-group-item, li-list-group-item, .bg-light{
-  background-color:#db3f3f!important;
-  user-select:none;
-}
-
-imageElement{
-  user-select:none;
-}
-
-li.list-group-item{
-  border:none;
-}
+h1,h5,p{font-family:pokemon_text!important;user-select:none}.navbar-light,.navbar-toggler,a.nav-link,a.navbar-brand{font-family:pokemon_text;color:#d5d50d!important;user-select:none}@font-face{font-family:pokemon_text;src:url(Pokemon_Solid.ttf)}h1{color:#d5d50d!important;text-align:center;font-size:3rem;margin-bottom:50px;margin-top:50px}h5,p{color:#000}.modal-footer,.modal-header{border-bottom:1px solid #000;border-top:1px solid #000;user-select:none}.modal-content{background-color:#d5d50d!important;user-select:none}.btn-secondary,.card-btn{font-family:pokemon_text!important;background:purple;color:#d5d50d;user-select:none}.card-btn{border-radius:20px;border:0;font-weight:600;cursor:pointer;justify-content:center;align-items:center;display:flex;height:200px;width:150px}li.list-group-item{justify-content:center;display:flex;background-color:#db3f3f!important;border:none}.btn-secondary:hover,.card-btn:hover{background:#b801b8}.pokemon-list row list-group{border:none;user-select:none}.bg-light,body,html,li-list-group-item,li.col.list-group-item{background-color:#db3f3f!important;user-select:none}imageElement{user-select:none}
